Use binary stylesheets when possible